Changelog for CmdArgs

    Support all the types in Data.Int/Data.Word
    Make modeArgs take a list of arguments as well
0.7
    No changes, just a version bump to allow requiring the GHC fix
0.6.10
    Change the annotate module to cope better with GHC's CSE
0.6.9
    #422, support newtype value as the underlying type
0.6.8
    Allow versionArgs [summary] to override --version
    Improve the documentation surrounding opt
    Add modeReform to Mode
    Add modeEmpty, to construct blank Mode values
    Improve the documentation surrounding pure annotations.
0.6.7
    #395, don't put two newlines after --help or --version
0.6.6
    #392, support helpArgs [groupname "something"]
0.6.5
    Don't fail with ambiguous enum if you exactly match a value
    Put errors on stderr
0.6.4
    Eliminate the filepath dependence
0.6.3
    Switch mtl for transformers
0.6.2
    Build on GHC 7.0 RC2, add an extra type signature
    Add verbosityArgs to customise the verbose/quiet flags
    Add helpArg/versionArg flags to customise those flags
    Support multiline summary using \n escape codes
0.6.1
    Build on GHC 6.10, don't rely on record name disambiguation
0.6
    Add ignore annotation for modes and flags
    #350, make top-level help appear properly
0.5
    #351, name/explicit attributes on mode were broken (regression)
0.4
    #342, display common fields only once
    Raise errors if annotations are placed in invalid places
    Rewrite the translation of annotation to explicit modes
    Treat anything after -- as an argument
    Add a pure annotation mechanism
    Introduce System.Console.CmdArgs.Annotate
0.3
    Add a documentation example for the Explicit mode
    Improve the purity and annotations a bit, try disabling CSE
    Change the help format
    Rename groupHiden to groupHidden, patch from Matthew Cox
    Bug, missing fields and explicit enums didn't work together
0.2
    #252, add support for grouped flags/modes
    #333, support missing fields