@@ -1,5 +1,6 @@
 Changelog for CmdArgs
 
+    #450, redo the manual generator so Maker example is not cut off
     Support all the types in Data.Int/Data.Word
     Make modeArgs take a list of arguments as well
 0.7
